# audacious-musepack

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  libmpc.c  libmpc.cpp  libmpc.h
src/: Makefile.am  Makefile.in  config.h.in  equalizer.cpp  equalizer.h  libmpc.cpp  libmpc.h  tags.cpp  tags.h
